IDP-1516 - Reduce Guava dependence
https://issues.shibboleth.net/jira/browse/IDP-1516